@@ -42,7 +42,7 @@
 
   print "<form name='edit' method='post' action='/$current_top/" . $current_sub . "_edit.php?item=$edit_item'>";
   print "<div id='add'><table>";
-  print "<tr><td><img src='../images/node.png'></td><td valign='middle' colspan=2><b>Editing: ".$edit_info->rows[0]['desc']."</b></td></tr>";
+  print "<tr><td><img src='../images/violation.png'></td><td valign='middle' colspan=2><b>Editing: ".$edit_info->rows[0]['desc']."</b></td></tr>";
   foreach($edit_info->rows[0] as $key => $val){
     if($key == $edit_info->key){
       continue;
