@@ -45,7 +45,7 @@
 
   print "<form name='edit' method='post' action='/$current_top/edit.php?item=$edit_item'>";
   print "<div id='add'><table>";
-  print "<tr><td><img src='../images/edit.png'></td><td valign='middle' colspan=2><b>Editing Violation ".$edit_info->rows[0]['id']."</b></td></tr>";
+  print "<tr><td><img src='../images/violation.png' width=16 height=16></td><td valign='middle' colspan=2><b>Editing Violation ".$edit_info->rows[0]['id']."</b></td></tr>";
   foreach($edit_info->rows[0] as $key => $val){
     if(($key == 'id')||($key == 'computername')){
       continue;
