@@ -93,6 +93,8 @@
           (http://www.packetfence.org/mantis/view.php?id=652)
         fixed web admin GUI - node and person edit
           (http://www.packetfence.org/mantis/view.php?id=653)
+        fixed icons for violation modifications
+          (http://www.packetfence.org/mantis/view.php?id=655)
 
 1.8.1
         authorized @ as first symbol in password
